--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,6 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
 
     <meta charset="utf-8">
@@ -14,7 +13,6 @@
 
     <!-- Custom fonts for this template-->
     <link rel="stylesheet" href="{% static "vendor/fontawesome-free/css/all.min.css" %}">
-    <!-- <link href="static/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css"> -->
     <link
         href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
@@ -22,8 +20,8 @@
     <!-- Custom styles for this template-->
     <link href="{% static "css/sb-admin-2.min.css" %}" rel="stylesheet">
 
-</head>
 
+</head>
 <body id="page-top">
 
     <!-- Page Wrapper -->
@@ -39,35 +37,15 @@
             <!-- Main Content -->
             <div id="content">
 
-                <!-- Topbar -->
                 {% include "navbar.html" %}
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
                 <div class="container-fluid">
 
-                    <!-- Page Heading -->
-                    <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Page Title</h1>
-                    </div>
-
                     <!-- Content Row -->
-                    <div class="row">
-                    </div>
-
-                    <!-- Content Row -->
-
-                    <div class="row">
-
-                    
-                    </div>
-
-                    <!-- Content Row -->
-                    <div class="row">
-
-                        <!-- Content Column -->
-                    </div>
-
+                    {% include "vaccination.html" %}
+    
                 </div>
                 <!-- /.container-fluid -->
 
@@ -78,7 +56,7 @@
             <footer class="sticky-footer bg-white">
                 <div class="container my-auto">
                     <div class="copyright text-center my-auto">
-                        <span>Copyright &copy; Your Website 2021</span>
+                        <span>Copyright &copy; Covid Dashboard 2021</span>
                     </div>
                 </div>
             </footer>
@@ -119,3 +97,4 @@
 </body>
 
 </html>
+
