Added resources , donation ,tracker and faq

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -13,7 +13,7 @@
     <hr class="sidebar-divider my-0">
 
     <!-- Nav Item - Dashboard -->
-    <li class="nav-item active">
+    <li class="nav-item">
         <a class="nav-link" href="{% url 'vaccination' %}">
             <i class="fas fa-fw fa-syringe"></i>
             <span>Vaccination</span></a>
@@ -42,9 +42,9 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'remdesivir' %}">
+        <a class="nav-link" href="{% url 'medicines' %}">
             <i class="fas fa-fw fa-syringe"></i>
-            <span>Remdesivir</span></a>
+            <span>Medicines</span></a>
     </li>
 
     <hr class="sidebar-divider">
@@ -63,9 +63,9 @@
     </li>
 
     <li class="nav-item">
-        <a class="nav-link" href="{% url 'guidelines' %}">
+        <a class="nav-link" href="https://www.mohfw.gov.in/pdf/FAQ.pdf" target="_blank">
             <i class="fas fa-fw fa-bible"></i>
-            <span>Covid Guidelines</span></a>
+            <span>Covid FAQ</span></a>
     </li>
 
 
