--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,7 +2,7 @@
 <nav class="navbar navbar-expand navbar-light bg-white topbar mb-1 static-top shadow">
 
     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-        <h1 class="h3 mb-0 text-gray-800">Vaccination Slots</h1>
+        <h1 class="h3 mb-0 text-gray-800">{{page_title}}</h1>
     </div>
 
 </nav>
